<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#9506B3A3"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/idemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/idpass1"
        app:layout_constraintEnd_toEndOf="@+id/idpass1" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Email"
        android:textColor="@color/edblack"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pass1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/hobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/Hobbies"
        android:textColor="@color/edblack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gender" />

    <CheckBox
        android:id="@+id/idch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/Programming"
        app:layout_constraintStart_toEndOf="@+id/hobbies"
        app:layout_constraintTop_toTopOf="@+id/idch4" />

    <EditText
        android:id="@+id/idpass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/idch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Running"
        app:layout_constraintBottom_toTopOf="@+id/idemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/idch3" />

    <CheckBox
        android:id="@+id/idch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Tense"
        app:layout_constraintBottom_toTopOf="@+id/idch4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pass2"
        android:layout_width="104dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/PasswordAgain"
        android:textColor="@color/edblack"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/idpass2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1" />

    <CheckBox
        android:id="@+id/idch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Football"
        app:layout_constraintBottom_toTopOf="@+id/idch3"
        app:layout_constraintEnd_toStartOf="@+id/idch2" />

    <EditText
        android:id="@+id/idpass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/idpass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/pass1" />

    <TextView
        android:id="@+id/pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Password"
        android:textColor="@color/edblack"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/idpass1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveid"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttcha"
        android:text="@string/Save"
        android:textColor="@color/btnwhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idpass2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/idname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/andro" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="22dp"
        android:text="@string/BarithDay"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/iddate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/Gender"
        android:textColor="@color/edblack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="3dp"
        android:text="@string/Username"
        android:textColor="@color/edblack"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/idname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/iddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/idname" />

    <EditText
        android:id="@+id/idname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="173dp"
        android:layout_height="131dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/Gender"
        app:layout_constraintTop_toBottomOf="@+id/iddate">

        <RadioButton
            android:id="@+id/idmale"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/idfemale"
            android:layout_width="95dp"
            android:layout_height="43dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="52dp"
            android:text="@string/FeMale" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>