<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#066F7C"
    tools:context=".MainActivity2">


    <Button
        android:id="@+id/btn1"
        android:layout_width="159dp"
        android:layout_height="62dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/buttcha"
        android:text="@string/New_Admin"
        android:textColor="@color/btnwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="159dp"
        android:layout_height="62dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/buttcha"
        android:text="@string/Login"
        android:textColor="@color/btnwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="221dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toTopOf="@+id/iduser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/andro" />

    <EditText
        android:id="@+id/iduser"
        android:layout_width="337dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="@color/btnwhite"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <EditText
        android:id="@+id/idpass"
        android:layout_width="337dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="@color/btnwhite"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />

</androidx.constraintlayout.widget.ConstraintLayout>